# region-map-editor

./: CMakeLists.txt  README.md  gitignore  imgui.ini  regions.json
assets/: overworld.json
docs/: architecture.md  software-choice.md
include/core/: Core.h  HistoryManager.h  SelectionState.h
include/data/: MapLoader.h  Marker.h  Region.h  RegionGeometry.h  RegionSerializer.h  RegionStatus.h  RegionTree.h  WorldLoader.h
include/input/: Input.h
include/math/: BlockCoord.h  MapCoord.h  Vec2.h
include/rendering/: Camera.h  GridRenderer.h  PopupRenderer.h  RegionRenderer.h  Renderer.h  Texture.h  Tile.h  TileLayer.h
include/ui/: UILayer.h
include/window/: OpenGLSetup.h  WindowCallbacks.h  WindowContext.h  WindowFactory.h  WindowSetup.h  WindowUI.h
src/: main.cpp
src/core/: Core.cpp  HistoryManager.cpp
src/data/: MapLoader.cpp  RegionSerializer.cpp  RegionTree.cpp  WorldLoader.cpp
src/input/: Input.cpp
src/rendering/: Camera.cpp  GridRenderer.cpp  PopupRenderer.cpp  RegionRenderer.cpp  Renderer.cpp  Texture.cpp  TileLayer.cpp
src/ui/: UILayer.cpp
src/window/: OpenGLSetup.cpp  WindowCallbacks.cpp  WindowFactory.cpp  WindowSetup.cpp  WindowUI.cpp
